# BEAST_pype

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  pyproject.toml  requirements.yml  requirements_dev_install.yml  run-workflow.slurm
.github/workflows/: python-publish.yml
example_data/: README.md
example_data/COVID-19_JN.1/: BDSky_test_ready_to_go.xml  Coalescent_Exponential_ready_to_go.xml  down_sampled_time.nwk
parameters/: README.md  Template_BDSKY-Serial-Comparative.yml  Template_BDSKY-Serial.yml  Template_Generic-Comparative.yml  Template_Generic.yml
parameters/locally_run_examples/: BDSKY-Serial-Comparative_change_times.yml  BDSKY-Serial-Comparative_full.yml  BDSKY-Serial-Comparative_no-initial-tree.yml  BDSKY-Serial_change_times.yml  BDSKY-Serial_full.yml  BDSKY-Serial_no-initial-tree.yml  BDSKY-Serial_xml-ready-to-go.yml  COVID-Strain-Surveillance.yml  Generic-Comparative_full.yml  Generic-Comparative_no-initial-tree.yml  Generic_full.yml  Generic_no-initial-tree.yml  Generic_xml-ready-to-go.yml  Optimising.yml
parameters/sbatch_run_examples/: BDSKY-Serial-Comparative_change_times.yml  BDSKY-Serial-Comparative_full.yml  BDSKY-Serial-Comparative_no-initial-tree.yml  BDSKY-Serial_change_times.yml  BDSKY-Serial_full.yml  BDSKY-Serial_no-initial-tree.yml  BDSKY-Serial_xml-ready-to-go.yml  COVID-Strain-Surveillance.yml  Generic-Comparative_full.yml  Generic-Comparative_no-initial-tree.yml  Generic_full.yml  Generic_no-initial-tree.yml  Generic_xml-ready-to-go.yml  Optimising.yml
template_beast_xmls/: BDSKY_serial_COVID-19_template.xml  COVID_epi_params.ipynb  Coalescent_Exponential_COVID-19_template.xml  New_COVID_inf_period.ipynb  README.md
tests/: README.md  base_test_classes.py
