[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "unidep"]

[project]
name = "beast_pype"
version = "0.1.0"
dynamic = ["dependencies"]
authors = [
  {name="Martin Grunnill", email="Martin.Grunnill@phac-aspc.gc.ca"},
]
maintainers = [
  { name="Martin Grunnill", email="Martin.Grunnill@phac-aspc.gc.ca"},
]
description = "A package of BEAST 2 pipelines for phylodynamics."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
#classifiers = [
#    'Development Status  =  4 - Beta',
#    "Programming Language  =  Python  =  3.10",
#    "License  =  OSI Approved  =  Apache Software License",
#    "Operating System  =  OS Independent",
#    "Natural Language  =  English",
#    "Topic  =  Scientific/Engineering",
#    "Intended Audience  =  Science/Research",
#]
# keywords should contain search terms so users can
# find our project
keywords = [
    "Phylodynamics",
    "Epimediology",
    "Ecology",
    "Virology"
]


[project.scripts]
beast_pype = "beast_pype.cli:beast_pype"

### Adding non python files
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ipynb"]


### Package Dependancy setup via setuptools and unidep
[tool.hatch.metadata.hooks.unidep]
# Enable the unidep plugin

[tool.hatch.metadata]
allow-direct-references = true

[tool.unidep]
channels = ["conda-forge", 'bioconda']
dependencies = [
    # Bioinformatics
    { conda = 'beast2'},
    { pip = 'beast2-xml >= 1.4.1'},
    { pip = 'dark-matter'},
    { conda = 'biopython'}, 
    { conda = 'iqtree'},
    { conda = 'treetime'},
    { conda = 'seqkit'},
    { conda = 'ete3'},
  # Python Data Sci
    { conda = 'scipy'},
    { conda = 'numpy'},
    { conda = 'pandas'},
 # Plotting figures.
    { conda = 'seaborn'},
    { conda = 'matplotlib'},
# MCMC diagnostics_of_selection
    { conda = 'arviz'},
    { conda = 'xarray'},
# Utils
    { pip = 'click'},
    { conda = 'pyyaml'},
    { conda = 'parallel'},
    { pip = 'python-dateutil'},
# Jupyter & Jutyper based workflow
    { conda = 'jupyter'},
    { conda = 'papermill'},
    { conda = 'nbconvert'},
    { conda = 'bash_kernel'},
    { conda = 'nbformat'},
    { conda = 'ipywidgets'}
]
#
#
#
#
#[project.urls]
#Homepage = "https://github.com/m-d-grunnill/MetaCast"
#Repository = "https://github.com/m-d-grunnill/MetaCast"
#Issues = "https://github.com/m-d-grunnill/MetaCast/issues"
#Documentaion = "https://metacast.readthedocs.io/en/latest/index.html"