[build-system]
requires = ["setuptools >= 77.0.3", "unidep", "wheel >= 0.38" ]
build-backend = "setuptools.build_meta"

[project]
name = "beast_pype"
version = "0.1.1"
dynamic = ["dependencies"]
authors = [
    {name="Martin Grunnill", email="Martin.Grunnill@phac-aspc.gc.ca"},
    {name="Carmen Lia Murall", email="Carmen.Lia.Murall@phac-aspc.gc.ca"}
]
maintainers = [
    {name="Martin Grunnill", email="Martin.Grunnill@phac-aspc.gc.ca"},
    {name="Carmen Lia Murall", email="Carmen.Lia.Murall@phac-aspc.gc.ca"}
]
description = "A package of BEAST 2 pipelines for phylodynamics."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]
# keywords should contain search terms so users can
# find our project
keywords = [
    "Phylodynamics",
    "Epimediology",
    "Ecology",
    "Virology",
    'Genomics'
]


[project.scripts]
beast_pype = "beast_pype.cli:beast_pype"

### Adding non python files
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.ipynb"]


### Package Dependancy setup via setuptools and unidep
[tool.hatch.metadata.hooks.unidep]
# Enable the unidep plugin

[tool.hatch.metadata]
allow-direct-references = true

[tool.unidep]
channels = ["conda-forge", 'bioconda']
dependencies = [
    # Bioinformatics
    { conda = 'beast2'},
    { pip = 'beast2-xml >= 1.4.1'},
    { pip = 'dark-matter'},
    { conda = 'biopython'}, 
    { conda = 'iqtree'},
    { conda = 'treetime'},
    { conda = 'seqkit'},
    { conda = 'ete3'},
  # Python Data Sci
    { conda = 'scipy'},
    { conda = 'numpy'},
    { conda = 'pandas'},
 # Plotting figures.
    { conda = 'seaborn'},
    { conda = 'matplotlib'},
# MCMC diagnostics_of_selection
    { conda = 'arviz'},
    { conda = 'xarray'},
# Utils
    { pip = 'click'},
    { conda = 'pyyaml'},
    { conda = 'parallel'},
    { pip = 'python-dateutil'},
# Jupyter & Jutyper based workflow
    { conda = 'jupyter'},
    { conda = 'papermill'},
    { conda = 'nbconvert'},
    { conda = 'bash_kernel'},
    { conda = 'nbformat'},
    { conda = 'ipywidgets'}
]


[project.urls]
Homepage = "https://github.com/m-d-grunnill/BEAST_pype"
Repository = "https://github.com/m-d-grunnill/BEAST_pype"
Issues = "https://github.com/m-d-grunnill/BEAST_pype/issues"
Documentaion = "https://github.com/m-d-grunnill/BEAST_pype/wiki"